src/test/ui/existential_types/existential-types-with-cycle-error.stderr
error: could not find defining uses
  --> $DIR/existential-types-with-cycle-error.rs:3:1
   |
LL | type Foo = impl Fn() -> Foo;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

